--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "build": {
         "productName": "productName",
         "appId": "org.your.productname",
-        "compression": "maximum",
         "electronVersion": "8.2.5",
         "electronDownload": {
             "version": "8.2.5",
@@ -55,18 +54,13 @@
         ],
         "win": {
             "target": "nsis",
-            "icon": "./build/icons/icon.ico",
-            "requestedExecutionLevel": "requireAdministrator",
             "artifactName": "product-name-${version}-${env.ARCH}.${ext}",
             "legalTrademarks": "productName"
         },
         "nsis": {
             "oneClick": false,
-            "perMachine": true,
-            "allowElevation": true,
-            "packElevateHelper": true,
             "allowToChangeInstallationDirectory": true,
-            "createStartMenuShortcut": false
+            "createStartMenuShortcut": true
         }
     },
     "license": "NO LICENSE",
@@ -145,7 +139,7 @@
         "sass": "^1.30.0",
         "sass-loader": "^10.1.0",
         "source-map-loader": "^1.1.3",
-        "terser-webpack-plugin": "^5.0.3",
+        "terser-webpack-plugin": "4.2.3",
         "thread-loader": "^3.0.1",
         "typescript": "4.1.2",
         "url-loader": "^4.1.1",
